[project]
name = "cyberfram"
version = "0.1.0"
description = "Cyber Security Framework Management and assessment"
authors = [
    {name = "Marc Michel",email = "marc.michel@mailfence.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "cyberfram", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
